--- a/src/App.css
+++ b/src/App.css
@@ -42,7 +42,9 @@
 } */
 
 
-
+/***
+Typography
+***/
 h1{
   text-align: center;
 }
@@ -50,12 +52,27 @@ h1{
 /***
 Layout
 ***/
+
+.container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  
+  border: 3px red solid;
+  row-gap: 2em;
+}
+
 .card-container{
   width: 80%;
   margin-inline: auto;
 
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(3, 1fr);
+  grid-template-columns: repeat(3, 0.5fr);
+  grid-template-rows: repeat(2, 0.5fr);
   gap: 30px 30px;
+}
+
+.next-button{
+  /* margin-inline: auto; */
+  font-size: 2em;
 }
